BSD fixes #321: Add center and right alignment styles for WYSIWYG.

--- a/stories/assets/styles/global/global.scss
+++ b/stories/assets/styles/global/global.scss
@@ -281,6 +281,14 @@ address {
   width: 85%;
 }
 
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
 // ==========================================================================
 // Form elements
 // ==========================================================================
